--- a/_pages/excluded_pages/portfolio.html
+++ b/_pages/excluded_pages/portfolio.html
@@ -3,6 +3,7 @@ layout: archive
 title: "Portfolio"
 permalink: /portfolio/
 author_profile: true
+exclude_from_site: true
 ---
 
 {% include base_path %}
