Change page heading

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Published work"
 permalink: /portfolio/
 author_profile: true
 exclude_from_site: true
