--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,6 +8,7 @@ exclude_from_site: true
 
 {% include base_path %}
 
+{% assign reversed_portfolio = site.portfolio | reverse %}
 
 {% for post in site.portfolio %}
   {% include archive-single.html %}
