--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -10,7 +10,7 @@ exclude_from_site: true
 
 {% assign reversed_portfolio = site.portfolio | reverse %}
 
-{% for post in site.portfolio %}
+{% for post in reversed_portfolio %}
   {% include archive-single.html %}
 {% endfor %}
 
