Change name of projects folder

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Published work"
+title: "Research projects"
 permalink: /portfolio/
 author_profile: true
 exclude_from_site: true
